# compare-ui-to-design

./: .gitignore  AGENTS.md  Makefile  README.md  package.json  packaging.allowlist  pyproject.toml
.github/workflows/: test.yml
scripts/: check_skill.py
skills/compare-ui-to-design/: SKILL.md
skills/compare-ui-to-design/agents/: openai.yaml
skills/compare-ui-to-design/references/: audit-rubric.md  capture-checklist.md
skills/compare-ui-to-design/scripts/: visual_diff.py
tests/: test_visual_diff.py
