[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "compare-ui-to-design"
version = "0.1.0"
description = "Agent skill and CLI for auditing UI/UX fidelity between running UI screenshots and design references."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jimmy" }]
dependencies = [
  "numpy>=1.22",
  "Pillow>=9.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]
dev = [
  "pytest>=7",
  "PyYAML>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
